# ModAI

./: .gitignore  README.md
AgentZerePy/: .env.example  Dockerfile  Dockerfile.prod  docker-compose.yml  justfile  pyproject.toml
AgentZerePy/agents/: example.json
AgentZerePy/data/: example_proposals.json
AgentZerePy/scripts/: start-dev.sh
AgentZerePy/src/: agent_mod.py  cli.py  connection_manager.py  prompts.py
AgentZerePy/src/agents/: agent_discord.py  agent_telegram.py
AgentZerePy/src/connections/: cowforum_connection.py  cowprotocol_connection.py  discord_connection.py  ethereum_connection.py  safe_connection.py  snapshot_connection.py
AgentZerePy/src/custom_plugins/: __init__.py
AgentZerePy/src/custom_plugins/openapi/: cow_agent_openapi.json  enso.json
AgentZerePy/src/helpers/ethereum/: cowprotocol.py  safe.py  snapshot.py
SafeCowService/: .env.example  Dockerfile  docker-compose.yml  justfile  openapi.yaml  package.json  pnpm-lock.yaml  tsconfig.json
SafeCowService/app/: layout.tsx
SafeCowService/app/api/balance/: route.ts
SafeCowService/app/api/cowswap/create/: route.ts
SafeCowService/app/api/cowswap/orders/: route.ts
SafeCowService/app/api/cowswap/sign_order/: route.ts
SafeCowService/app/api/docs/: route.ts
SafeCowService/app/api/enso/bundle/: route.ts
SafeCowService/app/api/enso/quote/: route.ts
SafeCowService/app/api/enso/route/: route.ts
SafeCowService/app/api/safe/balance/: route.ts
SafeCowService/app/api/safe/confirm/: route.ts
SafeCowService/app/api/safe/create_tx/: route.ts
SafeCowService/app/api/safe/status/: route.ts
SafeCowService/app/api/test/: route.ts
TgNotifyService/: .env.example  Dockerfile  Dockerfile.prod  core_idea.txt  docker-compose.yml  justfile  pyproject.toml
TgNotifyService/scripts/: start-dev.sh
TgNotifyService/src/: bot.py  config.py  main.py
TgNotifyService/src/utils/: commands.py
