[tool.poetry]
name = "chAIrman"
version = "0.1.0"
description = ""
authors = ["CrudyLame <dopeyslimeg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.8"
pydantic-settings = "^2.7.1"
httpx = "^0.28.1"
aiogram = "^3.13.1"
aioredis = "^2.0.1"
redis = "^5.2.1"
pydantic = "^2.9.2"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.0"
ruff = "^0.9.5"
uvicorn = "^0.34.0"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = ["E203"]
dummy-variable-rgx = "^_$"
mccabe = { max-complexity = 10 }

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

# Enable Pyflakes `E` and `F` codes by default.
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001",
]
ignore = ["D100", "D104", "D107"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

[tool.flake8]
max-line-length = 88
exclude = [".git", "__pycache__", "__init__.py", ".mypy_cache", ".pytest_cache", "alembic/*", "temp_*"]
ignore = ["E203", "W503"]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88